# jobsk

./: DEPLOYMENT_AND_SELLING.md  DEPLOY_VERCEL.md  README.md  pyproject.toml  requirements.txt  vercel.json
backend/: app.py  auth.py  chatbot.py  emailer.py  job_matcher.py  models.py  notifier.py  scheduler.py
public/: index.html
public/css/: style.css
public/js/: auth.js  config.js  main.js
public/pages/: login.html  reset-password.html
