[project]
name = "jobsk-backend"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "google-auth==2.27.0",
    "SQLAlchemy==2.0.30",
    "APScheduler==3.10.4",
    "scikit-learn==1.5.0",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "twilio==9.2.3",
    "anthropic==0.34.2",
    "psycopg2-binary==2.9.9",
]

[tool.vercel]
entrypoint = "backend.app:app"
